# akashi

./: .flake8  .gitignore  LICENSE.md  MANIFEST.in  README.md  on_install.py  on_publish.py  pyrightconfig.json  pyrightconfig.test.json  setup.py
akashi_cli/: cli.py  (+8 more)
akashi_engine/: .clang-format  CMakeLists.txt  PreLoad.cmake  akashi_version.sh
akashi_engine/cmake/: PrepareSharedDeps.cmake
akashi_engine/src/akencoder/: CMakeLists.txt  akencoder.cpp  akencoder.h  audio_renderer.cpp  audio_renderer.h  decoder.cpp  encode_loop.cpp  encode_loop.h  encode_queue.h  main.cpp  window.h  window_glfw.cpp
akashi_engine/src/akencoder/consumer/: consumer.cpp
akashi_engine/src/akencoder/producer/: audio_renderer.cpp  audio_renderer.h  decoder.h  producer.cpp
akashi_engine/src/akkernel/: CMakeLists.txt  kernel.cpp  kernel.h  kernel_event.cpp  kernel_event.h  kernel_handler.cpp  kernel_handler.h  kernel_state.h  main.cpp  pch.h
akashi_engine/src/akkernel/workers/: process.cpp  process.h  transport.cpp  transport.h
akashi_engine/src/akplayer/: CMakeLists.txt  main.cpp  pch.h
akashi_engine/src/akrenderer/: CMakeLists.txt  app.cpp  app.h  renderer.cpp  resource.qrc  window.cpp  window.h
akashi_engine/src/akrenderer/components/OSCWidget/: OSCWidget.cpp  OSCWidget.h
akashi_engine/src/akrenderer/components/PlayerWidget/: PlayerWidget.cpp  PlayerWidget.h
akashi_engine/src/akrenderer/container/: MonitorArea.cpp  MonitorArea.h  OSCArea.cpp  OSCArea.h
akashi_engine/src/akrenderer/interface/: asp.h  asp_media.cpp
akashi_engine/src/akrenderer/utils/: widget.cpp
akashi_engine/src/akui/: CMakeLists.txt  app.cpp  pch.h  renderer.cpp  window.cpp  window.h
akashi_engine/src/akui/components/OSCWidget/: OSCWidget.cpp  OSCWidget.h
akashi_engine/src/akui/components/PlayerWidget/: PlayerWidget.cpp  PlayerWidget.h
akashi_engine/src/akui/components/SliderSection/: SliderSection.cpp  SliderSection.h
akashi_engine/src/akui/components/WidgetSection/: WidgetSection.cpp  WidgetSection.h
akashi_engine/src/akui/container/: ControlArea.cpp  ControlArea.h  MonitorArea.cpp  MonitorArea.h  OSCArea.cpp  OSCArea.h
akashi_engine/src/akui/interface/: asp.h  asp_general.cpp  asp_gui.cpp  asp_media.cpp
akashi_engine/src/akui/utils/: widget.h  xutils.cpp  xutils.h
akashi_engine/src/libakaudio/: CMakeLists.txt  akaudio.cpp  akaudio.h  context.h  pch.h
akashi_engine/src/libakaudio/backend/: pulseaudio.h
akashi_engine/src/libakaudio/backend/pulseaudio/: callback.cpp  callback.h  callback_context.cpp  context.cpp  context.h  etc.h  mixer.cpp  mixer.h  stream.cpp  stream.h  util.cpp  util.h
akashi_engine/src/libakaudio/test/: CMakeLists.txt
akashi_engine/src/libakbuffer/: CMakeLists.txt  audio_buffer.cpp  audio_buffer.h  audio_queue.cpp  audio_queue.h  avbuffer.cpp  avbuffer.h  buffer.h  hwframe.h  hwframe_vaapi.h  ringbuffer.h  video_queue.cpp  video_queue.h
akashi_engine/src/libakbuffer/test/: CMakeLists.txt  pch.h  test_ringbuffer.cpp
akashi_engine/src/libakcodec/: CMakeLists.txt  akcodec.h  decode_item.h  decoder.cpp  decoder.h  encode_item.h  encoder.cpp  encoder.h  probe.h  sink.h  source.cpp  source.h
akashi_engine/src/libakcodec/backend/: ffmpeg.h
akashi_engine/src/libakcodec/backend/ffmpeg/: buffer.cpp  buffer.h  decode.cpp  decode.h  error.h  hwaccel.cpp  hwaccel.h  hwdec.cpp  hwdec.h  input.cpp  input.h  probe.cpp  pts.cpp  pts.h  sink.cpp  sink.h  source.cpp  source.h  utils.cpp  utils.h
akashi_engine/src/libakcodec/test/: CMakeLists.txt
akashi_engine/src/libakcore/: CMakeLists.txt  akcore.h  audio.h  class.h  codec.h  color.cpp  color.h  common.h  config.cpp  config.h  element.h  error.h  hw_accel.h  json.cpp  json.h  logger.cpp  logger.h  memory.h  path.cpp  path.h  pch.h  perf.h  rational.cpp  rational.h  string.cpp  string.h  time.cpp  time.h  utils.h  uuid.cpp  uuid.h
akashi_engine/src/libakcore/test/: CMakeLists.txt  test.cpp
akashi_engine/src/libakdebug/: CMakeLists.txt  akdebug.cpp  akdebug.h  glc.h
akashi_engine/src/libakdebug/imgui/: CMakeLists.txt
akashi_engine/src/libakencoder/: CMakeLists.txt  akencoder.cpp  akencoder.h  encode_queue.cpp  encode_queue.h  encode_state.cpp  encode_state.h
akashi_engine/src/libakencoder/consumer/: consumer.cpp  consumer.h
akashi_engine/src/libakencoder/producer/: decoder.cpp  producer.cpp  producer.h
akashi_engine/src/libakeval/: CMakeLists.txt  akeval.cpp  akeval.h  context.h  item.h  pch.h  proxy.cpp
akashi_engine/src/libakeval/backend/: python.h  ypython.h
akashi_engine/src/libakeval/backend/python/: context.cpp  context.h  parser.cpp  parser.h
akashi_engine/src/libakeval/backend/ypython/: context.cpp  context.h
akashi_engine/src/libakeval/test/: CMakeLists.txt  test_eval.cpp
akashi_engine/src/libakevent/: CMakeLists.txt  akevent.h
akashi_engine/src/libakgraphics/: CMakeLists.txt  akgraphics.cpp  akgraphics.h  context.h  drm_fourcc_excerpt.h  item.h  osc.cpp  osc.h  pch.h
akashi_engine/src/libakgraphics/backend/: ogl.h  opengl.h
akashi_engine/src/libakgraphics/backend/ogl/: camera.cpp  camera.h  context.cpp  context.h  fbo.cpp  fbo.h  glcontext.cpp  glcontext.h  render_context.cpp  render_context.h  stage.cpp  stage.h
akashi_engine/src/libakplayer/: CMakeLists.txt  akplayer.cpp  akplayer.h  eval_buffer.cpp  eval_buffer.h  event.cpp  event.h  perf.cpp  perf.h
akashi_engine/src/libakplayer/loop/: decode_loop.cpp  decode_loop.h  event_loop.cpp  event_loop.h  main_loop.cpp  main_loop.h  watch_loop.cpp  watch_loop.h
akashi_engine/src/libakplayer/reload/: hr_manager.cpp  hr_manager.h  seek_manager.cpp  seek_manager.h  utils.cpp  utils.h
akashi_engine/src/libakserver/: CMakeLists.txt  akserver.h  api.h  json_rpc.cpp  json_rpc.h  pch.h  server.cpp  server.h
akashi_engine/src/libakstate/: CMakeLists.txt  akstate.cpp  akstate.h
akashi_engine/src/libaktest/: CMakeLists.txt
akashi_engine/src/libakvgfx/: CMakeLists.txt  akvgfx.cpp  akvgfx.h  item.h
akashi_engine/src/libakwatch/: CMakeLists.txt  akwatch.cpp  akwatch.h  context.h  item.h
akashi_engine/src/libakwatch/backend/: libfswatch.h
(+299 files in other folders)
